# HTTP_Get_FIAS

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  vcpkg.json
cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  getInfoFromFias.sln  getInfoFromFias.vcxproj  getInfoFromFias.vcxproj.filters
cmake_build/getInfoFromFias.dir/Debug/getInfoFromFias.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
include/: HTTPGet.hpp
src/: HTTPGet.cpp  HTTPSGet.cpp  consoleTry.cpp  main.cpp  mian.cpp
